--- a/misc/cms.desktop
+++ b/misc/cms.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
-Name=CMS IOI 2025
-Exec=xdg-open https://cms.ioi2025.bo
+Name=IOI 2025
+Exec=xdg-open file:///usr/share/doc/ioi/index.html
 Type=Application
+Icon=firefox
